--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "bs-platform": "^8.4.2",
     "vite": "^2.0.0-beta.12"
   }
 }
