--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "reason-react": "^0.9.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.1.0",
