--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "rescript-minesweeper-game",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "dev": "run-p re:watch vite:serve",
+    "build": "run-s re:build vite:build",
+    "vite:serve": "vite",
+    "vite:build": "vite build",
+    "re:build": "bsb -make-world -clean-world",
+    "re:watch": "bsb -make-world -clean-world -w",
+    "re:clean": "bsb -clean-world"
   },
   "dependencies": {
     "react": "^17.0.0",
@@ -13,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.1.0",
     "bs-platform": "^8.4.2",
+    "npm-run-all": "^4.1.5",
     "vite": "^2.0.0-beta.12"
   }
 }
