--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rescript-minesweeper-game",
   "version": "0.0.0",
+  "keywords": ["rescript", "minesweeper", "game"],
   "scripts": {
     "dev": "run-p re:watch vite:serve",
     "build": "run-s re:build vite:build",
