--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "rescript-minesweeper-game",
   "version": "0.0.0",
-  "keywords": ["rescript", "minesweeper", "game"],
+  "keywords": [
+    "rescript",
+    "minesweeper",
+    "game"
+  ],
   "scripts": {
     "dev": "run-p re:watch vite:serve",
     "build": "run-s re:build vite:build",
@@ -18,7 +22,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.1.0",
-    "bs-platform": "^8.4.2",
+    "bs-platform": "9.0.1",
     "npm-run-all": "^4.1.5",
     "vite": "^2.0.0-beta.12"
   }
