--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "re:clean": "bsb -clean-world"
   },
   "dependencies": {
+    "@rescript/react": "^0.10.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "reason-react": "^0.9.1"
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.1.0",
